Fixed Link Copying in subpages (Removed custom element "wafiq5-copied-confirmation") + removed button tap color on mobile devices

--- a/CSS/global-styles.css
+++ b/CSS/global-styles.css
@@ -156,6 +156,11 @@
     background: transparent;
     border: none;
 }
+button,
+.button,
+.button-2{
+    -webkit-tap-highlight-color: transparent;
+}
 .link-copied-confirmation{
     position: fixed;
     z-index: 100000;
