--- a/CSS/main-style.css
+++ b/CSS/main-style.css
@@ -11,7 +11,7 @@
     box-sizing: border-box;
     font-family: Cascadia Code, sans-serif;
     scroll-behavior: smooth;
-    font-weight: 600;
+    font-weight: 500;
 }
 
 body, html {
